[gd_scene load_steps=3 format=3 uid="uid://bjjo1gejj32nx"]

[ext_resource type="Script" path="res://rad_particle.gd" id="1_pdidu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7umqo"]
radius = 5.0
height = 20.0

[node name="RadParticle" type="Node2D"]
script = ExtResource("1_pdidu")

[node name="Area2D" type="Area2D" parent="."]

[node name="HurtBox" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7umqo")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
